# listgrok

./: .gitignore  Makefile  README.md  faction_data.json  listparser.py  pyproject.toml
.github/workflows/: on-main.yml
examples/: example1.txt  example2.txt  listparser.py
examples/nr/: nr1.txt  nr1_gw.txt  nr1_short.txt  nr1_wtc.txt
examples/official_app/: example1.txt  example2.txt
listgrok/: __init__.py  game_data.py  parse_list.py
listgrok/parsers/: __init__.py  official_app.py
src/: listparser.py
src/army/: army_list.py
src/listgrok/: __init__.py  parse_list.py
src/listgrok/army/: __init__.py  army_list.py
src/listgrok/parsers/: __init__.py  helpers.py  new_recruit.py  new_recruit_gw.py  official_app.py  parse_error.py  test_official_app.py
src/parsers/: official_app.py
src/tests/: test_new_recruit.py  test_official_app.py
tests/: test_helpers.py  test_new_recruit.py  test_official_app.py
