[project]
name = "listgrok"
version = "0.1.0"
description = "Parse Warhammer 40k lists"
authors = [
    { name = "powens", email = "1919554+powens@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
lint = [
  "ruff"
]