[project]
name = "listgrok"
version = "0.1.0"
description = "Warhammer 40k 10th edition list parser"
authors = [
    { name = "powens", email = "1919554+powens@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.7.0",
    "pytest>=8.3.5",
    "pytest-random-order>=1.1.1",
]
lint = [
    "ruff"
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "examples/",
    "tests/",
]
